--- a/index.html
+++ b/index.html
@@ -50,10 +50,9 @@ hero_text:
                     Full-stack professional
                 </h3>
                 <div class="featuredList__text">
-                    I work with React-powered frontend and Firebase-powered
-                    backend stack to create delightful, functional and
-                    performant Progressive Web Apps (PWAs) for wide range of
-                    browsers and devices.
+                    I use React for frontend and Firebase for backend to create
+                    delightful, functional and performant Progressive Web Apps
+                    (PWAs) for wide range of browsers and devices.
                 </div>
             </article>
             <article class="featuredList__item glide__slide">
@@ -64,9 +63,10 @@ hero_text:
                     Hackathon winner
                 </h3>
                 <div class="featuredList__text">
-                    So far, I've competed and won a grand prize in 3 hackathons:
-                    DEV x Twilio hackathon, Egghead VSCode hackathon and
-                    Hashnode Christmas hackathon.
+                    So far, I've competed and won grand prizes in three
+                    hackathons: DEV x Twilio hackathon in 2020, Egghead VSCode
+                    snippet challenge in 2020 and Hashnode Christmas hackathon
+                    in 2021.
                 </div>
             </article>
             <article class="featuredList__item glide__slide">
@@ -90,10 +90,10 @@ hero_text:
                     Magento-certified developer
                 </h3>
                 <div class="featuredList__text">
-                    I have developed and maintained multiple Magento and Magento
-                    2 projects ranging from small-scale websites to multi-store
-                    enterprise websites. I'm also certified Magento 1 and
-                    Magento 2 developer.
+                    I have developed and maintained multiple Magento projects
+                    ranging from small-scale websites to multi-store enterprise
+                    websites. I'm also certified Magento 1 and Magento 2
+                    developer.
                 </div>
             </article>
         </div>
