--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,116 +10,204 @@ collectionpage: portfolio
 ---
 
 <main class="main container">
-    <section class="container--alt banner banner--center">
+    <section
+        class="container--alt banner banner--center portfolio-featured-banner"
+    >
         <article class="banner__container">
             <h2 class="banner__text skills__title">Award-winning projects</h2>
         </article>
     </section>
+    <section class="glide portfolio-featured" id="js-portfolio-featured">
+        <div class="glide__track" data-glide-el="track">
+            <div class="glide__slides">
+                <article class="glide__slide">
+                    <div class="card">
+                        <a class="card__link" href="/portfolio/homebound.html">
+                            <div
+                                class="container--secondary card__titleWrapper"
+                            >
+                                <h2 class="card__title">Homebound</h2>
+                                <div>React, Firebase, Twilio</div>
+                            </div>
 
-    <div>
-        <ul>
-            <li>
-                <article class="card portfolio__item">
-                    <a class="card__link" href="/portfolio/homebound.html">
-                        <div class="card__titleWrapper">
-                            <h2 class="card__title">Homebound</h2>
-                            <div>React, Firebase, Twilio</div>
-                        </div>
+                            <div class="card__imageWrapper">
+                                <div class="card__background"></div>
+                                <div class="card__inner">
+                                    <div class="imageContainer">
+                                        <picture>
+                                            <source
+                                                data-srcset="https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v15468800658/work/homebound-1.webp"
+                                                type="image/webp"
+                                                srcset="
+                                                    https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v15468800658/work/homebound-1.webp
+                                                "
+                                            />
+                                            <source
+                                                data-srcset="https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v15468800658/work/homebound-1.jpg"
+                                                srcset="
+                                                    https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v15468800658/work/homebound-1.jpg
+                                                "
+                                            />
+                                            <img
+                                                loading="lazy"
+                                                class="card__image lazyload"
+                                                src="https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v15468800658/work/homebound-1.jpg"
+                                                data-src="https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v15468800658/work/homebound-1.jpg"
+                                                alt="Homebound"
+                                            />
+                                        </picture>
 
-                        <div class="card__imageWrapper">
-                            <div class="card__background"></div>
-                            <div class="card__inner">
-                                <div class="imageContainer">
-                                    <picture>
-                                        <source
-                                            data-srcset="https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v15468800658/work/homebound-1.webp"
-                                            type="image/webp"
-                                            srcset="
-                                                https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v15468800658/work/homebound-1.webp
-                                            "
-                                        />
-                                        <source
-                                            data-srcset="https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v15468800658/work/homebound-1.jpg"
-                                            srcset="
-                                                https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v15468800658/work/homebound-1.jpg
-                                            "
-                                        />
-                                        <img
-                                            loading="lazy"
-                                            class="card__image lazyload"
-                                            src="https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v15468800658/work/homebound-1.jpg"
-                                            data-src="https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v15468800658/work/homebound-1.jpg"
-                                            alt="Homebound"
-                                        />
-                                    </picture>
-
-                                    <div
-                                        class="image--default image--1024x643 image--lazyLoaded"
-                                    >
                                         <div
-                                            class="icon icon__image image--placeholder"
-                                        ></div>
+                                            class="image--default image--1024x643 image--lazyLoaded"
+                                        >
+                                            <div
+                                                class="icon icon__image image--placeholder"
+                                            ></div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </a>
+                        </a>
+                    </div>
                 </article>
-            </li>
 
-            <li>
-                <article class="card portfolio__item">
-                    <a
-                        class="card__link"
-                        href="/portfolio/awesome-seo-snippets.html"
-                    >
-                        <div class="container--alt card__titleWrapper">
-                            <h2 class="card__title">Awesome SEO Snippets</h2>
-                            <div>Web, VSCode</div>
-                        </div>
+                <article class="glide__slide">
+                    <div class="card">
+                        <a
+                            class="card__link"
+                            href="/portfolio/awesome-seo-snippets.html"
+                        >
+                            <div
+                                class="container--secondary card__titleWrapper"
+                            >
+                                <h2 class="card__title">
+                                    Awesome SEO Snippets
+                                </h2>
+                                <div>Web, VSCode</div>
+                            </div>
 
-                        <div class="card__imageWrapper">
-                            <div class="card__background"></div>
-                            <div class="card__inner">
-                                <div class="imageContainer">
-                                    <picture>
-                                        <source
-                                            data-srcset="https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v1546803150/work/awesome-seo-1.webp"
-                                            type="image/webp"
-                                            srcset="
-                                                https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v1546803150/work/awesome-seo-1.webp
-                                            "
-                                        />
-                                        <source
-                                            data-srcset="https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v1546803150/work/awesome-seo-1.jpg"
-                                            srcset="
-                                                https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v1546803150/work/awesome-seo-1.jpg
-                                            "
-                                        />
-                                        <img
-                                            loading="lazy"
-                                            class="card__image lazyload"
-                                            src="https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v1546803150/work/awesome-seo-1.jpg"
-                                            data-src="https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v1546803150/work/awesome-seo-1.jpg"
-                                            alt="Awesome SEO Snippets"
-                                        />
-                                    </picture>
+                            <div class="card__imageWrapper">
+                                <div class="card__background"></div>
+                                <div class="card__inner">
+                                    <div class="imageContainer">
+                                        <picture>
+                                            <source
+                                                data-srcset="https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v1546803150/work/awesome-seo-1.webp"
+                                                type="image/webp"
+                                                srcset="
+                                                    https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v1546803150/work/awesome-seo-1.webp
+                                                "
+                                            />
+                                            <source
+                                                data-srcset="https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v1546803150/work/awesome-seo-1.jpg"
+                                                srcset="
+                                                    https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v1546803150/work/awesome-seo-1.jpg
+                                                "
+                                            />
+                                            <img
+                                                loading="lazy"
+                                                class="card__image lazyload"
+                                                src="https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v1546803150/work/awesome-seo-1.jpg"
+                                                data-src="https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v1546803150/work/awesome-seo-1.jpg"
+                                                alt="Awesome SEO Snippets"
+                                            />
+                                        </picture>
 
-                                    <div
-                                        class="image--default image--1024x643 image--lazyLoaded"
-                                    >
                                         <div
-                                            class="icon icon__image image--placeholder"
-                                        ></div>
+                                            class="image--default image--1024x643 image--lazyLoaded"
+                                        >
+                                            <div
+                                                class="icon icon__image image--placeholder"
+                                            ></div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                    </a>
+                        </a>
+                    </div>
                 </article>
-            </li>
-        </ul>
-    </div>
+                <article class="glide__slide">
+                    <div class="card">
+                        <a
+                            class="card__link"
+                            href="/portfolio/dream-painter.html"
+                        >
+                            <div
+                                class="container--secondary card__titleWrapper"
+                            >
+                                <h2 class="card__title">Magic painter</h2>
+                                <div>React, Canvas API</div>
+                            </div>
+
+                            <div class="card__imageWrapper">
+                                <div class="card__background"></div>
+                                <div class="card__inner">
+                                    <div class="imageContainer">
+                                        <picture>
+                                            <source
+                                                data-srcset="https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v1611414690/work/magic-painter.webp"
+                                                type="image/webp"
+                                                srcset="
+                                                    https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v1611414690/work/magic-painter.webp
+                                                "
+                                            />
+                                            <source
+                                                data-srcset="https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v1611414690/work/magic-painter.jpg"
+                                                srcset="
+                                                    https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v1611414690/work/magic-painter.jpg
+                                                "
+                                            />
+                                            <img
+                                                loading="lazy"
+                                                class="card__image lazyload"
+                                                src="https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v1611414690/work/magic-painter.jpg"
+                                                data-src="https://res.cloudinary.com/dazdt97d3/image/upload/q_auto:good/v1611414690/work/magic-painter.jpg"
+                                                alt="Magic painter"
+                                            />
+                                        </picture>
+
+                                        <div
+                                            class="image--default image--1024x643 image--lazyLoaded"
+                                        >
+                                            <div
+                                                class="icon icon__image image--placeholder"
+                                            ></div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </article>
+            </div>
+        </div>
+        <div
+            class="featuredList__controls featuredList__controls--single"
+            data-glide-el="controls[nav]"
+        >
+            <button
+                aria-label="Slide 1"
+                class="button glide__bullet"
+                data-glide-dir="=0"
+            >
+                <span class="visuallyHidden">Slide 1</span>
+            </button>
+            <button
+                aria-label="Slide 2"
+                class="button glide__bullet"
+                data-glide-dir="=1"
+            >
+                <span class="visuallyHidden">Slide 2</span>
+            </button>
+            <button
+                aria-label="Slide 3"
+                class="button glide__bullet"
+                data-glide-dir="=2"
+            >
+                <span class="visuallyHidden">Slide 3</span>
+            </button>
+        </div>
+    </section>
 
     <div class="project__headingWrapper">
         <h2 class="title--secondary featuredWork__title">All projects</h2>
@@ -130,3 +218,45 @@ collectionpage: portfolio
         in sortedWork %} {% include work-card.html %} {% endfor %}
     </section>
 </main>
+
+{% include glide.html %}
+
+<script>
+    var options = {
+        type: "slider",
+        bound: true,
+        rewind: false,
+        touchRatio: 0,
+        gap: 24,
+        perView: 3,
+        breakpoints: {
+            568: {
+                touchRatio: 0.5,
+                perView: 1,
+            },
+            1024: {
+                touchRatio: 0.5,
+                perView: 2,
+                gap: 32,
+            },
+            1440: {
+                gap: 84,
+                touchRatio: 0.5,
+                perView: 2,
+            },
+        },
+    };
+
+    var jsTestimonialsOptions = {
+        bound: true,
+        rewind: false,
+        touchRatio: 1,
+        type: "slider",
+        perView: 1,
+        gap: 0,
+    };
+
+    setTimeout(function () {
+        var jsPortfolio = new Glide("#js-portfolio-featured", options).mount();
+    }, 200);
+</script>
