--- a/skills/index.html
+++ b/skills/index.html
@@ -205,7 +205,9 @@ hero_text: <div class="hero__subtitle">Web and eCommerce development, tech writi
 
     <section class="container--alt banner banner--center">
         <article class="banner__container">
-            <h2 class="banner__text skills__title">Testimonials</h2>
+            <h2 class="banner__text skills__title">
+                Words from my clients &amp; colleagues
+            </h2>
         </article>
     </section>
     <section
